# Drift_Chamber

./: .gitignore  Classes.py  Dockerfile  README.ipynb  README.md  drift_chamber.py  main.py  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: docker-image.yml  python-package.yml
Drift_Chamber_/: Classes.py  driftchamber.py  main.py  muon.py  requirements.txt  widget.py
src/drift_chamber/: __init__.py  __main__.py  driftchamber.py  muon.py  widget.py
src/driftchamber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_muon.py
