[metadata]
name = driftchamber
author = Joe Button
license = MIT
platforms = osx
classifier = 
	Programming Language :: Python :: 3 :: Only

[options]
packages = 
	drift_chamber
install_requires = 
	numpy >= 1.23.5
	scipy >= 1.9.3
	matplotlib >= 3.6.2
package_dir = 
	=src
zip_safe = no

[flake8]
extend-ignore = E402
max-line-length = 128
per-file-ignores =
    # imported but unused
    __init__.py: F401

